--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.11.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
+    "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
     "formik": "^2.4.6",
     "next": "15.5.4",
     "next-auth": "^5.0.0-beta.29",
